Add build to version

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ allprojects {
     apply plugin: "maven-publish"
 
     archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version
+    version = "${project.mod_version}+mc${project.minecraft_version}-${getVersionMetadata()}"
     group = rootProject.maven_group
 
     repositories {
@@ -67,4 +67,15 @@ allprojects {
             // Add repositories to publish to here.
         }
     }
+}
+
+static def getVersionMetadata() {
+    def build_id = System.getenv("GITHUB_RUN_NUMBER")
+
+    // CI builds only
+    if (build_id != null) {
+        return "build.${build_id}"
+    }
+    // No tracking information could be found about the build
+    return "unknown"
 }
