--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ allprojects {
     apply plugin: "maven-publish"
 
     archivesBaseName = rootProject.archives_base_name
-    version = "${project.mod_version}+mc${project.minecraft_version}-${getVersionMetadata()}"
+    version = "${rootProject.minecraft_version}-${rootProject.mod_version}"
     group = rootProject.maven_group
 
     repositories {
@@ -67,15 +67,4 @@ allprojects {
             // Add repositories to publish to here.
         }
     }
-}
-
-static def getVersionMetadata() {
-    def build_id = System.getenv("GITHUB_RUN_NUMBER")
-
-    // CI builds only
-    if (build_id != null) {
-        return "build.${build_id}"
-    }
-    // No tracking information could be found about the build
-    return "unknown"
 }
