--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "com.github.johnrengelman.shadow"
 }
 
+version = version + "-fabric"
+
 architectury {
     platformSetupLoomIde()
     fabric()
