--- a/gradle.properties
+++ b/gradle.properties
@@ -5,17 +5,17 @@ org.gradle.jvmargs=-Xmx4G
     minecraft_version = 1.19.4
     yarn_mappings = 1.19.4+build.2
     loader_version = 0.14.21
-    forge_version = 1.19.4-45.0.66
+    forge_version = 1.19.4-45.1.0
 
 # Mod Properties
-    mod_version = 1.0.2
+    mod_version = 1.0.3
     maven_group = com.github.dima_dencep.mods
-    archives_base_name = online_emotes
+    archives_base_name = online-emotes
 
 # Dependencies
-    emotecraft_version = 2.2.7-b.build.48+1.19.4
+    emotecraft_version = 2.2.7-a.build.49+1.19.4
     playeranimator_version = 1.0.2+1.19.4
     cloth_config_version = 10.0.96
     netty_version = 4.1.82.Final
     fabric_version = 0.83.0+1.19.4
-    modmenu_version = 6.2.2
+    modmenu_version = 6.2.3
