--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx4G
 
 # Properties
-    minecraft_version = 1.19.4
-    yarn_mappings = 1.19.4+build.2
+    minecraft_version = 1.20.1
+    yarn_mappings = 1.20.1+build.9
     loader_version = 0.14.21
-    forge_version = 1.19.4-45.1.0
+    forge_version = 1.20.1-47.0.43
 
 # Mod Properties
     mod_version = 1.0.3
@@ -13,9 +13,9 @@ org.gradle.jvmargs=-Xmx4G
     archives_base_name = online-emotes
 
 # Dependencies
-    emotecraft_version = 2.2.7-a.build.49+1.19.4
-    playeranimator_version = 1.0.2+1.19.4
-    cloth_config_version = 10.0.96
+    emotecraft_version = 2.2.7-a.build.49+1.20.1
+    playeranimator_version = 1.0.2-rc1+1.20
+    cloth_config_version = 11.0.99
     netty_version = 4.1.82.Final
-    fabric_version = 0.83.0+1.19.4
-    modmenu_version = 6.2.3
+    fabric_version = 0.85.0+1.20.1
+    modmenu_version = 7.1.0
