--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,10 +70,7 @@ jobs:
           loaders: forge
 
           game-versions: |
-            ${{ steps.read_property.outputs.minecraft_version }}
-            1.19.4
-            1.19.3
-            1.19.2
+            [1.19.2,${{ steps.read_property.outputs.minecraft_version }})
           
           dependencies: |
             emotecraft{modrinth:pZ2wrerK}{curseforge:403422}
@@ -106,10 +103,7 @@ jobs:
             quilt
 
           game-versions: |
-            ${{ steps.read_property.outputs.minecraft_version }}
-            1.19.4
-            1.19.3
-            1.19.2
+            [1.19.2,${{ steps.read_property.outputs.minecraft_version }})
           
           dependencies: |
             emotecraft{modrinth:pZ2wrerK}{curseforge:397809}
