--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx4G
 
 # Properties
     minecraft_version = 1.20.1
-    yarn_mappings = 1.20.1+build.9
-    loader_version = 0.14.21
-    forge_version = 1.20.1-47.0.43
+    yarn_mappings = 1.20.1+build.10
+    loader_version = 0.14.22
+    forge_version = 1.20.1-47.1.3
 
 # Mod Properties
-    mod_version = 2.0.1
+    mod_version = 2.1.0
     maven_group = com.github.dima_dencep.mods
     archives_base_name = online-emotes
 
 # Dependencies
-    emotecraft_version = 2.2.7-a.build.49+1.20.1
+    emotecraft_version = 2.2.7-b.build.50+1.20.1
     playeranimator_version = 1.0.2-rc1+1.20
-    cloth_config_version = 11.0.99
+    cloth_config_version = 11.1.106
     netty_version = 4.1.82.Final
-    fabric_version = 0.85.0+1.20.1
-    modmenu_version = 7.1.0
+    fabric_version = 0.87.0+1.20.1
+    modmenu_version = 7.2.1
