--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -67,10 +67,12 @@ jobs:
 
           version-type: release
 
-          loaders: forge
+          loaders: |
+            neoforge
+            forge
 
           game-versions: |
-            >=1.19.2 <=${{ steps.read_property.outputs.minecraft_version }}
+            >=1.18.2 <=${{ steps.read_property.outputs.minecraft_version }}
           
           dependencies: |
             emotecraft{modrinth:pZ2wrerK}{curseforge:403422}
@@ -103,7 +105,7 @@ jobs:
             quilt
 
           game-versions: |
-            >=1.19.2 <=${{ steps.read_property.outputs.minecraft_version }}
+            >=1.18.2 <=${{ steps.read_property.outputs.minecraft_version }}
           
           dependencies: |
             emotecraft{modrinth:pZ2wrerK}{curseforge:397809}
