--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Publish Forge to Modrinth & CurseForge
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          #modrinth-id: Dc4g4seU
-          #modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          modrinth-id: Dc4g4seU
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
 
           curseforge-id: 868230
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
