--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id "com.github.johnrengelman.shadow" version "8.1.1" apply false
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.3-SNAPSHOT" apply false
-    id 'io.github.juuxel.loom-vineflower' version '1.11.0' apply false
+    id "dev.architectury.loom" version "1.4-SNAPSHOT" apply false
     id "io.github.p03w.machete" version "2.+" apply false
 }
 
@@ -12,7 +11,6 @@ architectury {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
-    apply plugin: "io.github.juuxel.loom-vineflower"
     apply plugin: "io.github.p03w.machete"
 
     loom {
@@ -43,7 +41,7 @@ allprojects {
     repositories {
         maven {
             name = "Essential"
-            url = "https://repo.essential.gg/repository/maven-public/"
+            url = "https://repo.essential.gg/repository/maven-public"
         }
         maven {
             name = "Terraformersmc"
@@ -55,11 +53,11 @@ allprojects {
         }
         maven {
             name = "Shedaniel maven"
-            url = "https://maven.shedaniel.me/"
+            url = "https://maven.shedaniel.me"
         }
         maven {
             name = "KosmX's maven"
-            url = 'https://maven.kosmx.dev/'
+            url = "https://maven.kosmx.dev"
         }
     }
 
