--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     }
 
     modImplementation "maven.modrinth:emotecraft:${rootProject.emotecraft_version}-fabric"
-    modImplementation "maven.modrinth:playeranimator:${rootProject.playeranimator_version}-fabric"
+    modImplementation "dev.kosmx.player-anim:player-animation-lib-fabric:${rootProject.playeranimator_version}"
 
     modCompileOnly "gg.essential:essential-${rootProject.minecraft_version}-fabric:+"
     modRuntimeOnly "gg.essential:loader-fabric:+"
