--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,23 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
+org.gradle.parallel=true
+# fabric.loom.multiProjectOptimisation=true
 
 # Properties
-    minecraft_version = 1.20.1
-    yarn_mappings = 1.20.1+build.10
-    loader_version = 0.15.3
-    forge_version = 1.20.1-47.1.3
+    minecraft_version = 1.20.4
+    parchment_version = 2023.12.31
+    loader_version = 0.15.7
+    forge_version = 20.4.173
 
 # Mod Properties
-    mod_version = 2.1.2
+    mod_version = 3.0.0
     maven_group = com.github.dima_dencep.mods
     archives_base_name = online-emotes
 
 # Dependencies
-    emotecraft_version = 2.2.7-b.build.50+1.20.1
-    playeranimator_version = 1.0.2-rc1+1.20
-    cloth_config_version = 11.1.118
-    netty_version = 4.1.82.Final
-    fabric_version = 0.91.0+1.20.1
-    modmenu_version = 7.2.2
+    emotecraft_version = 2.4.0-a.e6b71d19
+    playeranimator_version = 1.0.2-rc1+1.20.4
+    cloth_config_version = 13.0.121
+    netty_version = 4.1.97.Final
+    fabric_version = 0.96.3+1.20.4
+    modmenu_version = 9.0.0
