--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
 architectury {
-    common("forge", "fabric")
+    common("neoforge", "fabric")
 }
 
 loom {
@@ -9,12 +9,16 @@ loom {
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.loader_version}"
 
-    modImplementation "me.shedaniel.cloth:cloth-config:${rootProject.cloth_config_version}"
-
-    modImplementation "maven.modrinth:emotecraft:${rootProject.emotecraft_version}-fabric"
+    // EmoteCraft
     modImplementation "dev.kosmx.player-anim:player-animation-lib:${rootProject.playeranimator_version}"
+    modImplementation "dev.kosmx.player-anim:anim-core:${rootProject.playeranimator_version}"
+    modImplementation "io.github.kosmx.emotes:fabric:${rootProject.emotecraft_version}:fabric"
 
-    implementation("io.netty:netty-codec-http:${rootProject.netty_version}")
+    implementation "io.netty:netty-codec-http:${rootProject.netty_version}"
+}
+
+jar {
+    from rootProject.file("LICENSE")
 }
 
 publishing {
