--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 modLoader = "javafml"
 loaderVersion = "*"
 issueTrackerURL = "https://github.com/dima-dencep/online-emotes/issues"
-license = "AGPL-3.0-only"
+license = "OSL-3.0"
 
 [[mods]]
 modId = "online_emotes"
@@ -12,25 +12,21 @@ authors = "dima_dencep"
 credits = "NE4T0, nneewwtt"
 displayURL = "https://curseforge.com/minecraft/mc-mods/online-emotes"
 description = "Allows players to see each other's emotes without emotecraft installed on the server."
-logoFile = "icon.png"
+logoFile = "assets/online-emotes/icon.png"
+
+[[mixins]]
+config = "online-emotes.mixins.json"
 
 [[dependencies.online_emotes]]
-modId = "forge"
-mandatory = true
+modId = "neoforge"
+type = "required"
 versionRange = "*"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.online_emotes]]
-modId = "cloth_config"
-mandatory = true
-versionRange = "*"
-ordering = "NONE"
-side = "CLIENT"
-
-[[dependencies.online_emotes]]
 modId = "emotecraft"
-mandatory = true
+type = "required"
 versionRange = "*"
 ordering = "AFTER"
 side = "CLIENT"
